# memo-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose-example.yml
.circleci/: config.yml
.github/workflows/: build-and-upload.yml  build-arm64.yml  build-assets.yml
api/: .env.example  Cargo.toml  Dockerfile  README.md
api/src/: auth.rs  bucket.rs  client.rs  command.rs  config.rs  db.rs  dir.rs  error.rs  file.rs  health.rs  main.rs  oauth.rs  run.rs  state.rs  storage.rs  token.rs
api/src/auth/: actor.rs  mod.rs  password.rs  queries.rs  token.rs  user.rs
api/src/buckets/: models.rs  queries.rs
api/src/clients/: models.rs  queries.rs
api/src/dirs/: models.rs  queries.rs
api/src/files/: queries.rs
api/src/users/: models.rs  queries.rs
api/src/web/: auth.rs  handler.rs  middleware.rs  mod.rs  not_found.rs  params.rs  response.rs  routes.rs  server.rs
api/src/web/clients/: handlers.rs  routes.rs
api/src/web/dirs/: handlers.rs
api/src/web/files/: handlers.rs
api/src/web/middlewares/: auth.rs  bucket.rs  dir.rs  file.rs
db/: Cargo.toml  README.md
db/db/migrations/: 03-create-buckets.sql  04-create-dirs.sql  06-create-files.sql  07-dirs-dir-type.sql  07-files-uploaded-at.sql  08-files-populate-uploaded-at.sql
db/db/migrations/memo/: 04-create-users.sql
db/migrations/2025-07-13-072454_bucket_labels/: down.sql
db/migrations/2025-07-13-074038_populate_bucket_labels/: up.sql
db/src/: any.rs  bucket.rs  client.rs  db.rs  db_pool.rs  dir.rs  error.rs  file.rs  lib.rs  test.rs  turso_decode.rs  user.rs
db2/: Cargo.toml  README.md
db2/db/migrations/: 02-create-clients.sql  03-create-buckets.sql  04-create-dirs.sql  06-create-files.sql
db2/migrations/2025-07-13-072454_bucket_labels/: up.sql
db2/migrations/2025-07-13-074038_populate_bucket_labels/: down.sql
db2/src/: any.rs  bucket.rs  client.rs  db.rs  dir.rs  error.rs  file.rs  lib.rs  schema.rs  test.rs  user.rs
db2/turso-migrations/: 02-create-clients.sql
docs/: README.md
memo/: Cargo.toml
memo/src/: actor.rs  bucket.rs  dir.rs  error.rs  file.rs  lib.rs  role.rs
memo/src/dto/: bucket.rs  client.rs  file.rs  mod.rs  user.rs
memo/src/utils/: id.rs
memo/src/validators/: mod.rs
migrate-ids/: .env-example  Cargo.toml  README.md
migrate-ids/src/: config.rs  main.rs  run.rs
migrate_turso/: Cargo.toml  README.md
migrate_turso/src/: bucket.rs  client.rs  command.rs  config.rs  dir.rs  error.rs  main.rs  run.rs  state.rs
migrate_turso/src/web/: handler.rs
migrate_yaas/: Cargo.toml  README.md
migrate_yaas/src/: run.rs
password/: Cargo.toml
scripts/: backup-db.sh
src/: config.rs  main.rs  run.rs
src/models/: template.rs
src/services/: auth.rs
src/web/: error.rs  login.rs  pref.rs
src/web/albums/: add.rs  edit.rs  listing.rs
src/web/middlewares/: album.rs
src/web/photos/: listing.rs
storage/: Cargo.toml
storage/src/: client.rs  error.rs  lib.rs  provider.rs  storage.rs
storage/src/providers/: aws.rs  google.rs  mod.rs
templates/layout/: base.html
templates/widgets/: login_form.html
terraform/: .gitignore  README.md  main.tf  memo-rs-resource-policy.json  outputs.tf  variables.tf  versions.tf
website/: .env.example  Cargo.toml  README.md
website/frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
website/frontend/bundles/: gallery.css  gallery.js  main.css  main.js  upload.js
website/frontend/public/assets/css/: style.css
website/frontend/public/assets/js/: create-album.js  delete-album.js  file-lising.js  file-listing.js  login.js  nav.js  photo-gallery.js  site.js  upload.js
website/src/: config.rs  ctx.rs  error.rs  main.rs  run.rs
website/src/models/: buckets.rs  clients.rs  login.rs  mod.rs  pagination.rs  params.rs  photos.rs  template.rs  user.rs  users.rs
website/src/services/: auth.rs  buckets.rs  captcha.rs  clients.rs  dirs.rs  files.rs  mod.rs  oauth.rs  photos.rs  token.rs  users.rs
website/src/web/: auth.rs  buckets.rs  clients.rs  dirs.rs  document_whitelist.rs  error.rs  files.rs  index.rs  login.rs  logout.rs  middleware.rs  mod.rs  my_bucket.rs  policies.rs  pref.rs  profile.rs  routes.rs  users.rs
website/src/web/admin/: buckets.rs  clients.rs  mod.rs  users.rs
website/src/web/albums/: add.rs  del.rs  edit.rs  listing.rs
website/src/web/middlewares/: album.rs  auth.rs  photo.rs
website/src/web/photos/: del.rs  listing.rs  upload.rs
website/templates/layout/: base.html  footer.html  nav.html
website/templates/pages/: bucket.html  buckets.html  client.html  dir.html  edit_client.html  index.html  login.html  my_bucket.html  new_bucket.html  new_client.html  new_dir.html  profile.html  upload_documents.html  upload_photos.html  user.html  users.html
website/templates/widgets/: clients.html  confirm_delete_file_form.html  confirm_delete_photo_form.html  delete_bucket_form.html  delete_dir_form.html  edit_album_form.html  edit_bucket_controls.html  edit_bucket_form.html  edit_client_controls.html  edit_client_form.html  edit_dir_controls.html  edit_dir_form.html  edit_profile_controls.html  edit_user_controls.html  file_actions.html  file_actions_form.html  file_table.html  login_form.html  new_album_form.html  new_bucket_form.html  new_client_form.html  new_dir_form.html  photo_grid.html  pre_delete_file_form.html  pre_delete_photo_form.html  reset_user_password_form.html  search_dirs.html  update_user_role_form.html  update_user_status_form.html  uploaded_file_item.html  user_controls.html
yaas/: Cargo.toml
yaas/src/: actor.rs  error.rs  lib.rs  oauth.rs  user.rs
