[package]
name = "memo-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = "0.4.38"
clap = { version = "4.5.31", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
multer = "3.1.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive"] }
