[workspace]
resolver = "2"

members = [ "api", "db", "memo", "password", "storage", "website", "yaas" ]

[workspace.dependencies]
askama = { version = "0.14.0" }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.40"
google-cloud-auth = "1.9.0"
google-cloud-storage = "1.11.0"
image = "0.25.6"
infer = "0.19.0"
jsonwebtoken = "9.3.1"
moka = { version = "0.12.10", features = ["sync"] }
kamadak-exif = "0.6.1"
multer = "3.1.0"
reqwest = { version = "0.12.14", features = ["json"] }
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = { version = "0.8.5", features = ["backtrace"] }
text_io = "0.1.13"
tokio = { version = "1.44.0", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
turso = "0.5.3"
urlencoding = "2.1.3"
uuid = { version = "1.15.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
