[workspace]
resolver = "2"

members = [ "api", "db", "memo", "password", "storage", "website", "yaas" ]

[workspace.dependencies]
askama = { version = "0.15.6" }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.44"
google-cloud-auth = "1.9.0"
google-cloud-storage = "1.11.0"
image = "0.25.10"
infer = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
moka = { version = "0.12.15", features = ["sync"] }
kamadak-exif = "0.6.1"
multer = "3.1.0"
reqwest = { version = "0.13.2", features = ["json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snafu = { version = "0.9.0" }
tokio = { version = "1.52.1", features = ["full"] }
tower = "0.5.3"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.8", features = ["fs", "limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
turso = "0.5.3"
urlencoding = "2.1.3"
uuid = { version = "1.23.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
