[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
deadpool-diesel.workspace = true
derive_more.workspace = true
diesel.workspace = true
google-cloud-storage.workspace = true
image.workspace = true
infer.workspace = true
jsonwebtoken.workspace = true
kamadak-exif.workspace = true
multer.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true
memo = { path = "../memo" }
