[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
rand.workspace = true
serde.workspace = true
snafu.workspace = true
tracing.workspace = true
tokio.workspace = true
turso.workspace = true
validator.workspace = true
memo = { path = "../memo" }
password = { path = "../password" }
yaas = { path = "../yaas" }
