[package]
name = "migrate-ids"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
db = { path = "../db" }
memo = { path = "../memo" }
password = { path = "../password" }
storage = { path = "../storage" }
yaas = { path = "../yaas" }
