[package]
name = "migrate_turso"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
turso.workspace = true
validator.workspace = true
memo = { path = "../memo" }
db = { path = "../db" }
