[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
google-cloud-storage.workspace = true
image.workspace = true
infer.workspace = true
jsonwebtoken.workspace = true
kamadak-exif.workspace = true
multer.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
text_io.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
memo = { path = "../memo" }
