[package]
name = "website"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
moka.workspace = true
multer.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
validator.workspace = true
memo = { path = "../memo" }
yaas = { path = "../yaas" }
